--- a/app/style.styl
+++ b/app/style.styl
@@ -1,6 +1,7 @@
+@import "globals.styl"
 @import "imports.styl"
-
 body
-  overflow hidden
+  overflow-x hidden
+  border-radius 10px;
   width 200%
   height 200%
