mobile view updated

--- a/app/area/area.mobile.styl
+++ b/app/area/area.mobile.styl
@@ -1,4 +1,7 @@
-@media (max-width: screen-mobile-breakpoint)
+@media screen and (max-width: screen-mobile-breakpoint)
   .charts-view
   .tables-view
     display none
+    
+  .app-view-mobile
+    display inline-block
