--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -1,6 +1,5 @@
-@media (min-width: screen-mobile-breakpoint)
-  .charts-view-mobile,
-  .tables-view-mobile
+@media screen and (min-width: screen-mobile-breakpoint)
+  .app-view-mobile
     display none
 
 .charts-view
