--- a/app/globals.styl
+++ b/app/globals.styl
@@ -3,7 +3,10 @@ screen-mobile-breakpoint=768px
 
 // colors
 mjn-yellow = #FDE433
-
+main-color = #7DCDB1
+main-color-bright = #4EBE9D
+second-color = #A660BA
+second-color-bright = #B378C4
 
 // fonts
 @font-face 
