--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -38,6 +38,8 @@ page-layout-margins = 0 50px 0 50px
     color #FFF
   &.open-menu
     width 50px
+    line-height 35px
+    
 
 .election-dropdown
   right 10px
