Election types dropdown v3

--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -46,10 +46,10 @@ page-layout-margins = 0 50px 0 50px
   width 260px
   text-align left
   position: absolute
-  background-color main-color
+  background-color third-color
   z-index: 1000
   color #FFF
-  font-size 19px
+  font-size 18px
   padding-top 10px
   &.active
     border-bottom 1px solid second-color-bright    
@@ -59,7 +59,7 @@ page-layout-margins = 0 50px 0 50px
     vertical-align middle
     &.glyphicon-chevron-down
       position absolute
-      right 5px
+      right 10px
       padding-top 5px
 
   &.kinds
@@ -80,7 +80,7 @@ page-layout-margins = 0 50px 0 50px
       
     .element
       cursor pointer
-      font-size 16px
+      font-size 15px
       border-top 1px solid second-color-bright
       &:hover
         background-color second-color-bright
