--- a/app/globals.styl
+++ b/app/globals.styl
@@ -7,6 +7,8 @@ main-color = #7DCDB1
 main-color-bright = #4EBE9D
 second-color = #A660BA
 second-color-bright = #B378C4
+third-color = #F97200
+third-color-bright = #F97200
 
 // fonts
 @font-face 
