--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -106,19 +106,17 @@ page-layout-margins = 0 50px 0 50px
 .menu
   height 100%
   width 200px
-  display none
+  display block
   position fixed
   top 50px
-  left 0
+  left -200px
   z-index: 1000
   background second-color
   box-shadow 3px 5px 10px .5px #ccc
   color #FFF
   animation-duration: 1s
-  &.fadeInLeft
-    animation-duration: 0.5s
-  &.visible
-    display block
+  &.moveLeft
+    transform: translateX(200px);
   
   input
     margin 10px 0 10px 10px
