--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -13,13 +13,18 @@ page-layout-margins = 0 50px 0 50px
 
 .charts-view
 .tables-view
+.page-title
   max-height: 50%
   display inline-block
   animation-fill-mode forwards
-  margin page-layout-margins
 
 .charts-view
-  margin-top 100px
+.page-title
+  margin page-layout-margins
+
+.page-title
+  margin-top 75px
+  width 100%
 
 .menu-btn
   height 100%
@@ -63,7 +68,7 @@ page-layout-margins = 0 50px 0 50px
       padding-top 5px
 
   &.kinds
-    dropdown-height = 155px
+    dropdown-height = 190px
     z-index: 999
     top (50 - dropdown-height)px
     background-color second-color
@@ -72,7 +77,7 @@ page-layout-margins = 0 50px 0 50px
     
     &.moveDown
       transition 0.3s linear all;
-      transform translateY(140px);
+      transform translateY(178px);
       box-shadow -3px -5px 10px .5px #ccc
     &.moveOutDown
       transition 0.3s linear all;
@@ -114,7 +119,8 @@ page-layout-margins = 0 50px 0 50px
   background second-color
   box-shadow 3px 5px 10px .5px #ccc
   color #FFF
-  animation-duration: 1s
+  animation-duration 1s
+  overflow-x auto
   &.moveLeft
     transform: translateX(200px);
   
@@ -124,14 +130,3 @@ page-layout-margins = 0 50px 0 50px
     border none
     padding-left 10px
     height 30px
-
-  .tree
-    width 100%
-    height 35px
-    font-weight 500
-    line-height 30px
-    padding-left 10px
-    cursor: pointer
-    &:hover
-      background-color second-color-bright
-      color #FFF
