--- a/app/charts/main/charts.dir.jade
+++ b/app/charts/main/charts.dir.jade
@@ -1,5 +1,4 @@
-h1 {{electionKind}}
-.col-md-6
-  nvd3(options="options" data="data")
-.col-md-6
-  p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu porttitor lectus. Integer maximus bibendum turpis viverra facilisis. Nulla volutpat dapibus lacus, in sodales massa sagittis in. Suspendisse euismod magna ut dui bibendum convallis. Aliquam erat volutpat. Vivamus nibh felis, hendrerit quis lorem fermentum, pharetra tristique justo. Nam tincidunt ante erat, a suscipit dolor ullamcorper vel. Sed eu sem risus. In vel nibh nisi. Curabitur leo sem, porta ut ipsum sed, tincidunt feugiat felis.
+//- .col-md-6
+//-   nvd3(options="options" data="chartData")
+//- .col-md-6
+//-   p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu porttitor lectus. Integer maximus bibendum turpis viverra facilisis. Nulla volutpat dapibus lacus, in sodales massa sagittis in. Suspendisse euismod magna ut dui bibendum convallis. Aliquam erat volutpat. Vivamus nibh felis, hendrerit quis lorem fermentum, pharetra tristique justo. Nam tincidunt ante erat, a suscipit dolor ullamcorper vel. Sed eu sem risus. In vel nibh nisi. Curabitur leo sem, porta ut ipsum sed, tincidunt feugiat felis.
