--- a/app/tables/main/tables.dir.jade
+++ b/app/tables/main/tables.dir.jade
@@ -1,15 +1,33 @@
-table(st-table="rowCollection" class="table table-striped table-sample")
+table(st-table="stats" class="table table-striped table-sample")
   thead
     tr
-      th first name
-      th last name
-      th birth date
-      th balance
-      th email
+      th Liczba uprawnionych do glosowania
+      th Frekwencja
+      th Kart wydanych
+      th Glosow waznych
+      th Glosow niewaznych
+      th Glosow waznych (%)
+      th Glosow oddanych
   tbody
-    tr(ng-repeat="row in rowCollection")
-      td {{row.firstName}}
-      td {{row.lastName}}
-      td {{row.birthDate}}
-      td {{row.balance}}
-      td {{row.email}}
+    tr
+      td {{stats.geography.number_of_voters}}
+      td {{stats.geography.attendance_p + '%'}}
+      td {{stats.geography.cards_given}}
+      td {{stats.geography.votes_valid}}
+      td {{stats.geography.votes_invalid}}
+      td {{stats.geography.votes_valid_p + '%'}}
+      td {{stats.geography.cards_valid}}
+
+table(st-table="stats" class="table table-striped table-sample")
+  thead
+      tr
+        th Partia
+        th Liczba Glosow
+        th % Glosow
+    tbody
+      tr(ng-repeat="v in stats.votes")
+        td {{v.political_party}}
+        td {{v.amount}}
+        td {{v.percentage + '%'}}
+
+
