--- a/app/area/tree/main-city.dir.jade
+++ b/app/area/tree/main-city.dir.jade
@@ -1,5 +1,5 @@
 ul(class="elements-tree")
-  li(class="tree-element main-city" ng-click="deactivateAllBranches($event)")
+  li(class="tree-element main-city" ng-click="changeArea($event, election)")
     p Warszawa
-    button(class="btn change-area" ng-click="changeArea($event, election)")
-      span.glyphicon.glyphicon-arrow-right
+    //- button(class="change-area btn")
+    //-   span.glyphicon.glyphicon-arrow-right
