--- a/app/imports.styl
+++ b/app/imports.styl
@@ -2,3 +2,4 @@
 @import "area/area.mobile.styl"
 @import "area/tree/tree.styl"
 @import "tables/main/tables.styl"
+@import "charts/main/charts.styl"
