--- a/app/tables/main/tables.dir.jade
+++ b/app/tables/main/tables.dir.jade
@@ -1,3 +1,4 @@
+h4 Geografia:
 table(st-table="stats" class="table table-striped table-sample")
   thead
     tr
@@ -19,7 +20,7 @@ table(st-table="stats" class="table table-striped table-sample")
       td {{stats.geography.votes_invalid}}
       td {{stats.geography.votes_valid_p + '%'}}
       
-
+h4 Wyniki wyborow:
 table(st-table="stats" class="table table-striped table-sample")
   thead
       tr
