--- a/app/area/area.mobile.styl
+++ b/app/area/area.mobile.styl
@@ -1,7 +1,7 @@
 @media screen and (max-width: screen-mobile-breakpoint)
-  .charts-view
-  .tables-view
-    display none
+  // .charts-view
+  // .tables-view
+  //   display none
     
-  .app-view-mobile
-    display inline-block
+  // .app-view-mobile
+  //   display inline-block
