--- a/app/imports.styl
+++ b/app/imports.styl
@@ -3,3 +3,5 @@
 @import "area/tree/tree.styl"
 @import "tables/main/tables.styl"
 @import "charts/main/charts.styl"
+@import "landing_page/landing.styl"
+@import "landing_page/areas_dropdown/dropdown.styl"
