--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -149,3 +149,12 @@ page-layout-margins = 0 50px 0 50px
     border none
     padding-left 10px
     height 30px
+
+.choose-election-data
+  text-align center
+  top 40%
+  position absolute
+
+@media screen and (max-width: 996px)
+  .choose-election-data
+    width 100%
