fixed errors for FF and IE

--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -21,6 +21,7 @@ page-layout-margins = 0 50px 0 50px
 .charts-view
   width 90%
   left 30px
+  height 400px
   &.moveLeft
     transform: translateX(150px);
 
