--- a/app/globals.styl
+++ b/app/globals.styl
@@ -4,11 +4,11 @@ screen-tablet-breakpoint=996px
 
 // colors
 mjn-yellow = #FDE433
-main-color = #7DCDB1
-main-color-bright = #4EBE9D
-second-color = #A660BA
-second-color-bright = #B378C4
-third-color = #F97200
+main-color = #000 // #7DCDB1
+main-color-bright = #FDE433
+second-color = #910CE8
+second-color-bright = #CD0CE8
+third-color = #550CE8
 third-color-bright = #F97200
 
 // fonts
