--- a/app/landing_page/landing.ctrl.jade
+++ b/app/landing_page/landing.ctrl.jade
@@ -1,7 +1,14 @@
 .landing.col-md-12
   content.col-md-4.col-md-offset-4
-    h2 Wybierz typ danych
-    select-area(data="tree" model="data")
-    button(class="btn" ng-click="gotoStats()")
+    h2 Wyniki wyborów samorządowych
+      span(class="glyphicon glyphicon-stats")
+    h4.title-city Warszawa 2014
+    
+    //- choose-election(tree="tree" model="data")
+    .btn-group(ng-repeat ="type in tree")
+      button(class="btn-go btn" ng-click="gotoStats(type.url)") {{type.name}}
+    //- button(class="btn-go btn" ng-click="gotoStats()") Zobacz Statystyki
+    //- button(class="btn-go btn" ng-click="gotoStats()") Zobacz Statystyki
+    //- button(class="btn-go btn" ng-click="gotoStats()") Zobacz Statystyki
 
   footer
