--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -1,9 +1,9 @@
 nav.nav
   a(class="menu-btn open-menu btn" ng-click='openMenu = !openMenu' ng-class="{active: openMenu}" ng-show="dataUrl") 
     span.glyphicon.glyphicon-menu-hamburger
-  a(class="menu-btn nav-btn open-menu btn chart-btn" ng-click='scrollTo("#charts")' ng-show="dataUrl") Wykresy
+  a(class="menu-btn nav-btn open-menu btn chart-btn" ng-click='scrollTo("#charts")' ng-show="dataUrl && stats") Wykresy
     span.glyphicon.glyphicon-stats
-  a(class="menu-btn nav-btn open-menu btn stats-btn" ng-click='scrollTo("#tables")' ng-show="dataUrl") Statystyki
+  a(class="menu-btn nav-btn open-menu btn stats-btn" ng-click='scrollTo("#tables")' ng-show="dataUrl && stats") Statystyki
     span.glyphicon.glyphicon-th-list
   a(class="menu-btn nav-btn open-menu btn" ng-click='scrollTo("#candidates")' ng-show="stats.candidates && dataUrl") Kandydaci
     span.glyphicon.glyphicon-user
@@ -29,6 +29,8 @@ section(class="tables-view" id="tables" ng-class="{moveLeft: openMenu, moveOutLe
 div(class="col-md-12 choose-election-data" ng-show = "!dataUrl")
   h1 Wybierz typ wyborów
     span.glyphicon.glyphicon-stats
+div(class="col-md-12 spinner" ng-show = "showSpinner")
+
 
 
 //- section.app-view-mobile
