--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -170,6 +170,14 @@ page-layout-margins = 0 50px 0 50px
   top 40%
   position absolute
 
+.spinner
+  position fixed
+  z-index: 1000
+  background-color rgba(255,255,255, 0.8)
+  display block
+  top 0px
+  height 100%
+
 @media screen and (max-width: 996px)
   .choose-election-data
     width 100%
