landing page burned

--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -29,7 +29,7 @@ section(class="tables-view" id="tables" ng-class="{moveLeft: openMenu, moveOutLe
 div(class="col-md-12 choose-election-data" ng-show = "!dataUrl")
   h1 Wybierz typ wyborów
     span.glyphicon.glyphicon-stats
-div(class="col-md-12 spinner" ng-show = "showSpinner")
+//- div(class="col-md-12 spinner" ng-show = "showSpinner")
 
 
 
