--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -77,6 +77,14 @@ page-layout-margins = 0 50px 0 50px
       right 5px
       top 14px
     
+h4.election-help-text
+  position absolute
+  right 280px 
+  color #FFF
+  line-height 27px
+  .glyphicon
+    font-size 20px
+    margin-left 10px
 
 .election-dropdown
   right 10px
@@ -89,7 +97,10 @@ page-layout-margins = 0 50px 0 50px
   font-size 18px
   padding-top 10px
   &.active
-    border-bottom 1px solid second-color-bright    
+    border-bottom 1px solid second-color-bright
+  &.default
+    text-align center
+    font-weight 500
   span
     line-height 35px
     text-align right
