--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -1,5 +1,5 @@
 nav.nav
-  a(class="menu-btn open-menu btn" ng-click='openMenu = !openMenu' ng-class="{active: openMenu}" ng-show="dataUrl") 
+  a(class="menu-btn open-menu btn" ng-click='showHideNavMenu()' ng-class="{active: openMenu || openMenu === undefined}" ng-show="dataUrl") 
     span.glyphicon.glyphicon-menu-hamburger
   a(class="menu-btn nav-btn open-menu btn chart-btn" ng-click='scrollTo("#charts")' ng-show="dataUrl && stats") Wykresy
     span.glyphicon.glyphicon-stats
@@ -7,8 +7,6 @@ nav.nav
     span.glyphicon.glyphicon-th-list
   a(class="menu-btn nav-btn open-menu btn" ng-click='scrollTo("#candidates")' ng-show="stats.candidates && dataUrl") Kandydaci
     span.glyphicon.glyphicon-user
-  h4(class="election-help-text" ng-show = "!dataUrl") Typ wyborów
-    span(class="glyphicon glyphicon-share-alt")
   a(class="menu-btn election-dropdown btn" ng-click="electionKindsDropwn = !electionKindsDropwn" ng-class="{active: electionKindsDropwn, default: !dataUrl}") {{electionKind.name}}
     span.glyphicon.glyphicon-chevron-down
   div(class="election-dropdown kinds" ng-class="{moveDown: electionKindsDropwn, moveOutDown: dropdownIsOff()}")
@@ -16,17 +14,17 @@ nav.nav
       span {{kind.name}}
       
 
-div(class="menu moveLeft" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff()}" ng-show="dataUrl")
+div(class="menu" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff(), menuDefault: menuDefault()}" ng-show="dataUrl")
   //- input(type="text" placeholder="Znajdz okreg wyborczy")
   main-city(election="navTree")
   .tree
    areas-tree(tree="navTree.children")
 
-section(class="page-title" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff()}") 
+section(class="page-title" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff(), menuDefault: menuDefault()}") 
   h2 {{siteName}}
-section(class="charts-view" id="charts" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff()}" ng-hide="!dataUrl")
+section(class="charts-view col-md-12" id="charts" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff(), menuDefault: menuDefault()}" ng-hide="!dataUrl")
   charts-view(data="stats")
-section(class="tables-view" id="tables" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff()}" ng-hide="!dataUrl")
+section(class="tables-view col-md-12" id="tables" ng-class="{moveLeft: openMenu, moveOutLeft: menuIsOff(), menuDefault: menuDefault()}" ng-hide="!dataUrl")
   tables-view(stats="stats" election-kind="electionKind")
 div(class="col-md-12 choose-election-data" ng-show = "!dataUrl")
   h1 Wybory Samorządowe 2014
