Prevent to reload controller after election type or location change

--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -30,7 +30,7 @@ div(class="col-md-12 choose-election-data" ng-show = "!dataUrl")
   h1 Wybory Samorządowe 2014
     span.glyphicon.glyphicon-stats
   h3 Warszawa 2014
-//- div(class="col-md-12 spinner" ng-show = "showSpinner")
+div(class="col-md-12 spinner" ng-show = "showSpinner")
 
 
 
